# btse-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
btse_sdk/: __init__.py  _version.py  core.py  enums.py  example.py  futures.py  orderbook_cache.py  spot.py  ws.py
examples/: config.py  futures_client.py  futures_orderbook_detailed.py  futures_orderbook_live.py  requirements.txt  spot_client.py  spot_orderbook_detailed.py  spot_orderbook_live.py
