[project]
name = "btse_sdk"
version = "0.1.0"
description = "Python SDK for BTSE Spot and Futures APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name="btsedev", email="support@btse.com" }
]

dependencies = [
    "requests",
    "websocket-client",
]

[project.urls]
Homepage = "https://github.com/btsecom/btse-sdk"
Issues = "https://github.com/btsecom/btse-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]